        Reviewed by Eric.

http://bugs.webkit.org/show_bug.cgi?id=12122
        SVGPathElement should not inherit from SVGPathParser

        Use path builders for building Path and PathSegLists.



git-svn-id: http://svn.webkit.org/repository/webkit/branches/feature-branch@22068 268f45cc-cd09-0410-ab3c-d52691b4dbfc